--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <script>window.global = window;</script>
         <script type="module">
             import { Buffer } from "buffer";
+            // import crypto from 'crypto'
             
             window.Buffer = Buffer;
+            // window.crypto = crypto;
         </script>
         <script  type="module" src="./src/js/app.js"></script>
     </body>
