--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             window.Buffer = Buffer;
             // window.crypto = crypto;
         </script>
-        <script  type="module" src="./src/js/app.js"></script>
+        <script  type="module" src="./src/js/app.ts"></script>
     </body>
 </html>
