--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
         <script>window.global = window;</script>
         <script type="module">
             import { Buffer } from "buffer";
-            // import crypto from 'crypto'
             
             window.Buffer = Buffer;
-            // window.crypto = crypto;
         </script>
-        <script  type="module" src="./src/js/app.ts"></script>
+        <script  type="module" src="./src/app.ts"></script>
     </body>
 </html>
