--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0f0f0f">
         <meta name="google" content="notranslate">
 
+        <link rel="icon" href="/favicon.svg">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
