--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <body>
         <div id="app"></div>
 
-        <script>window.global = window;</script>
+        <script>
+            window.global = window;
+        </script>
         <script type="module">
             import { Buffer } from "buffer";
             
